Hive theme for 4.7.4 with Dark Mode

--- a/textpattern/admin-themes/hive/assets/css/custom-example.css
+++ b/textpattern/admin-themes/hive/assets/css/custom-example.css
@@ -38,6 +38,15 @@
 } */
 
 
+/**
+ * Remove lightbulb (light/dark mode toggle).
+ */
+
+/* .txp-lightbulb {
+    display: none !important;
+} */
+
+
 
 /* Content -> Write panel
    ========================================================================== */
